Adicionado validação do campo Título

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
     <section class="forms">
     <form id="formCard">
         <h1 class="tittle">Checkpoint 1</h1>
+        
         <input type="text" name="titulo" id="titulo" class="form_input" placeholder="Digite o título" required minlength="4">
+        <small id="tituloValidacao"></small>
         <input type="text" name="description" id="description" class="form_input" placeholder="Digite a descrição" required minlength="4">
         <input type="url" name="url" id="url" class="form_input" placeholder="Digite a URL" required>
-        <input type="submit" value="Enviar" id="btn_enviar">
+        <input type="submit" value="Enviar" id="btn_enviar" disabled>
     </form>
     </section>
 
